tests/cases_invalid/misc/generics/.expected
error: could not find `Undefined` type
 --> ./cases_invalid/misc/generics/main.shd:5:37
  |
5 | struct UndefinedGenericConstType<N: Undefined> {
  |                                     ^^^^^^^^^ undefined type
  |

error: unsupported type `Data` in `const` context, expected `u32`, `i32`, `f32` or `bool`
 --> ./cases_invalid/misc/generics/main.shd:9:35
  |
9 | struct InvalidGenericConstType<N: Data> {
  |                                   ^^^^ unsupported type
  |

error: generic parameter with name `T` is defined multiple times
  --> ./cases_invalid/misc/generics/main.shd:13:32
   |
13 | struct DuplicatedGenericParams<T, U, T: u32, U: u32> {
   |                                ^     - info: generic parameter with same name is defined here
   |                                |
   |                                duplicated generic parameter name
   |

error: generic parameter with name `U` is defined multiple times
  --> ./cases_invalid/misc/generics/main.shd:13:35
   |
13 | struct DuplicatedGenericParams<T, U, T: u32, U: u32> {
   |                                   ^          - info: generic parameter with same name is defined here
   |                                   |
   |                                   duplicated generic parameter name
   |

error: could not find `Undefined` type
  --> ./cases_invalid/misc/generics/main.shd:17:36
   |
17 | fn undefined_generic_const_type<N: Undefined>() {
   |                                    ^^^^^^^^^ undefined type
   |

error: unsupported type `Data` in `const` context, expected `u32`, `i32`, `f32` or `bool`
  --> ./cases_invalid/misc/generics/main.shd:20:34
   |
20 | fn invalid_generic_const_type<N: Data>() {
   |                                  ^^^^ unsupported type
   |

error: function `duplicated_function<...>(_)` is defined multiple times
  --> ./cases_invalid/misc/generics/main.shd:26:4
   |
23 | fn duplicated_function<T, U>(param: i32) {
   |    ------------------- info: function with same signature is defined here
24 | }
25 |
26 | fn duplicated_function<T, U, V>(param: u32) {
   |    ^^^^^^^^^^^^^^^^^^^ duplicated function
   |

error: generic parameter with name `T` is defined multiple times
  --> ./cases_invalid/misc/generics/main.shd:29:30
   |
29 | fn duplicated_generic_params<T, U, T: u32, U: u32>() {
   |                              ^     - info: generic parameter with same name is defined here
   |                              |
   |                              duplicated generic parameter name
   |

error: generic parameter with name `U` is defined multiple times
  --> ./cases_invalid/misc/generics/main.shd:29:33
   |
29 | fn duplicated_generic_params<T, U, T: u32, U: u32>() {
   |                                 ^          - info: generic parameter with same name is defined here
   |                                 |
   |                                 duplicated generic parameter name
   |

error: could not find `undefined` value
  --> ./cases_invalid/misc/generics/main.shd:35:17
   |
35 | const INVALID = undefined;
   |                 ^^^^^^^^^ undefined identifier
   |

error: could not find `generic_function<...>(bool)` function
  --> ./cases_invalid/misc/generics/main.shd:40:5
   |
40 |     generic_function<u32, 1u>(true); // function param with invalid type
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ undefined function
   |

error: expected 2 generic parameters, got 1 parameters
  --> ./cases_invalid/misc/generics/main.shd:41:21
   |
32 | fn generic_function<T, U: u32>(param: u32) {
   |                    ----------- info: expected generic parameters
33 | }
...
40 |     generic_function<u32, 1u>(true); // function param with invalid type
41 |     generic_function<u32>(0u); // invalid number of generic params
   |                     ^^^^^ invalid number of generic parameters
   |

error: expected type, got constant expression
  --> ./cases_invalid/misc/generics/main.shd:42:22
   |
32 | fn generic_function<T, U: u32>(param: u32) {
   |                     - info: type is expected
33 | }
...
41 |     generic_function<u32>(0u); // invalid number of generic params
42 |     generic_function<1u, 1u>(0u); // invalid generic type
   |                      ^^ invalid type
   |

error: expected constant expression, got type
  --> ./cases_invalid/misc/generics/main.shd:43:27
   |
32 | fn generic_function<T, U: u32>(param: u32) {
   |                        - info: constant expression is expected
33 | }
...
42 |     generic_function<1u, 1u>(0u); // invalid generic type
43 |     generic_function<u32, u32>(0u); // invalid generic constant
   |                           ^^^ invalid constant expression
   |

error: expression with invalid type
  --> ./cases_invalid/misc/generics/main.shd:44:27
   |
32 | fn generic_function<T, U: u32>(param: u32) {
   |                           --- info: expected type `u32`
33 | }
...
43 |     generic_function<u32, u32>(0u); // invalid generic constant
44 |     generic_function<u32, 1>(0u); // invalid generic constant type
   |                           ^ invalid type `i32`
   |

error: could not find `undefined` value
  --> ./cases_invalid/misc/generics/main.shd:46:22
   |
46 |     generic_function<undefined, undefined>(0u);
   |                      ^^^^^^^^^ undefined identifier
   |

error: could not find `undefined` value
  --> ./cases_invalid/misc/generics/main.shd:46:33
   |
46 |     generic_function<undefined, undefined>(0u);
   |                                 ^^^^^^^^^ undefined identifier
   |
